<resources>
    <string name="Already_BookImport">책장 목록에 존재하는 책입니다.</string>
    <string name="DRM_Not_Certified">DRM 인증에 실패해서 이용하실 수 없는 책입니다.</string>
    <string name="DRM_Not_Passed_License">라이센스가 경과되서 이용하실 수 없는 책입니다.</string>
    <string name="Error_drm_message01">파일복호화 오류가 발생하였습니다. 다시 다운로드 받으시거나 고객센터에 문의해 주시기 바랍니다.</string>
    <string name="Error_drm_message02">일시적으로 서버에 장애가 발생하였습니다.잠시 후 다시 시도해 주시기 바랍니다.</string>
    <string name="Error_drm_message03">파일복호화 오류가 발생하였습니다. 다시 다운로드 받으시거나 고객센터에 문의해 주시기 바랍니다.</string>
    <string name="Preference3DEffectTitle">3D효과 설정</string>
    <string name="PreferenceFacebookSummary">인증 해제하기.</string>
    <string name="PreferenceFacebookSummary2">인증 저장 필요.</string>
    <string name="PreferenceFacebookTitle">페이스북 인증설정</string>
    <string name="PreferenceLotationTitle">가로세로 자동 회전</string>
    <string name="PreferenceMinutes">분</string>
    <string name="PreferenceMotionPage">모션 페이지 넘김</string>
    <string name="PreferencePageTitle">자동 페이지 넘김</string>
    <string name="PreferencePageTitle0">자동 페이지 넘김 설정</string>
    <string name="PreferencePage_MinutesLabel">분</string>
    <string name="PreferencePage_Seconds1">1분</string>
    <string name="PreferencePage_Seconds10">10초</string>
    <string name="PreferencePage_Seconds2">2분</string>
    <string name="PreferencePage_Seconds20">20초</string>
    <string name="PreferencePage_Seconds30">30초</string>
    <string name="PreferencePage_Seconds5">5분</string>
    <string name="PreferencePage_SecondsLabel">초</string>
    <string name="PreferencePage_SettingTitle">자동 페이지 넘김</string>
    <string name="PreferencePage_SettingTitle0">자동 페이지 넘김 설정</string>
    <string name="PreferencePage_TTSAutoPage">TTS 자동넘김</string>
    <string name="PreferencePage_TTSAutoPageInfo">TTS속도에 맞춰 페이지 넘김 시간이 자동으로 설정</string>
    <string name="PreferencePage_TimeSet_Label">자동 페이지 넘김 시간 설정</string>
    <string name="PreferenceTTSTitle">TTS 기능 설정</string>
    <string name="PreferenceTitle">설정</string>
    <string name="PreferenceTwitterDialogAuthBtn">인증</string>
    <string name="PreferenceTwitterDialogCancelBtn">취소</string>
    <string name="PreferenceTwitterDialogId">아 이 디</string>
    <string name="PreferenceTwitterDialogPw">패스워드</string>
    <string name="PreferenceTwitterFailedMsg">Wifi나 모바일가 활성화 되었는지 또는 트위터 계정을 바르게 입력이 되었는지 확인하여 주세요.</string>
    <string name="PreferenceTwitterNoInternetWarning">Wifi나 3G/4G가 활성화 되었는지 또는 트위터 계정을 바르게 입력이 되었는지 확인하여 주세요.</string>
    <string name="PreferenceTwitterNoInternetWarningTitle">경고</string>
    <string name="PreferenceTwitterSummary">인증 저장 되어있음.</string>
    <string name="PreferenceTwitterSummary2">인증 저장 필요.</string>
    <string name="PreferenceTwitterTitle">트위터 인증설정</string>
    <string name="PreferenceTwitter_AuthButton">인증 버튼</string>
    <string name="PreferenceTwitter_AuthCancelButton">인증 해제하기</string>
    <string name="PreferenceTwitter_AuthCancelStep1">1. \"인증 해제하기\" 버튼 클릭</string>
    <string name="PreferenceTwitter_AuthCancelStep2">2. 트위터 인증 해제완료</string>
    <string name="PreferenceTwitter_AuthCancelStepTitle">인증 해제 절차</string>
    <string name="PreferenceTwitter_AuthStep1">1.아이디와 패스워드를 입력 한뒤 인증버튼을 누릅니다.</string>
    <string name="PreferenceTwitter_AuthStep2">2.APP 실행시 자동인증하기를 설정하면 APP 실행시 트위터 인증이 유지됩니다.</string>
    <string name="PreferenceTwitter_AuthStepTitle">인증 절차</string>
    <string name="PreferenceTwitter_AuthorizingMessage">인증 완료</string>
    <string name="PreferenceTwitter_AutoAuthentication">APP 실행시 자동 인증하기</string>
    <string name="PreferenceTwitter_Info">트위터 인증을 통해 읽고있는 책정보, 본문내용, 메모를 트위터로 포스트 할 수 있습니다.</string>
    <string name="PreferenceValueOff">끔</string>
    <string name="PreferenceValueOn">켬</string>
    <string name="Preference_set">설정</string>
    <string name="Preferences_page_envset">페이지 환경설정</string>
    <string name="Preferences_page_timeset">페이지 시간설정</string>
    <string name="Preferences_twitter_envset">트위터 환경설정</string>
    <string name="Preferences_twitter_title_text">트위터 인증 설정</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="accept_infomation">위 내용을 확인하였습니다.</string>
    <string name="account_manage">계정 관리</string>
    <string name="action_connect">연결</string>
    <string name="action_delete">삭제</string>
    <string name="action_readon_exit">APP 종료</string>
    <string name="add">추가</string>
    <string name="add_complete">추가 완료</string>
    <string name="advance">Advance</string>
    <string name="al_applock_change">암호 변경</string>
    <string name="al_applock_finger">지문인식</string>
    <string name="al_applock_off">암호 해제</string>
    <string name="al_applock_onlyAppStart">앱 실행 시에만 사용</string>
    <string name="al_audiobook_data_is_null">도서 파일이 손상되었습니다. 삭제 및 재다운로드 하시겠습니까?</string>
    <string name="al_audiobook_delete_all_bookmark">모든 항목을 삭제 하시겠습니까?</string>
    <string name="al_audiobook_msg_under_jellybean">오디오북은 OS 4.1 이상의 기기에서 이용 가능합니다.</string>
    <string name="al_audiobook_settings_jump">앞/뒤 점프 시간 설정</string>
    <string name="al_audiobook_settings_move_chapter">챕터 이동 시 듣기 설정</string>
    <string name="al_audiobook_settings_move_chapter_default">챕터 처음부터</string>
    <string name="al_audiobook_settings_move_chapter_lastOffset">챕터 듣기 종료시점부터</string>
    <string name="al_audiobook_user_data_is_null">도서 파일이 손상되었습니다.</string>
    <string name="al_bookinfo_favorite">별점 전송 중..</string>
    <string name="al_bookinfo_lock">도서잠금</string>
    <string name="al_bookinfo_lock_set">시리즈잠금</string>
    <string name="al_bookinfo_readCompleteNo">완독해제</string>
    <string name="al_bookinfo_readCompleteYes">완독설정</string>
    <string name="al_bookinfo_readComplete_send">전송 중..</string>
    <string name="al_bookinfo_unlock">잠금해제</string>
    <string name="al_bookshelf_Login">"전자책 서재 로그인 상태가 아닙니다.
로그인 하시겠습니까?"</string>
    <string name="al_bookshelf_airplain_alert">"비행기 탑승 모드 입니다.
이미 다운로드 된 도서는 독서가 가능합니다."</string>
    <string name="al_bookshelf_authDevice">"다른 단말기에서 이 단말기 인증을 해제하였습니다. 

로그인 화면으로 이동합니다."</string>
    <string name="al_bookshelf_authError">"계정이 로그아웃 되었습니다.
도서 다운로드 및 구매목록 동기화를 하시려면 로그인이 필요합니다.
로그인 하시겠습니까?"</string>
    <string name="al_bookshelf_bookfileCheck">"도서 파일이 타 앱(예. V3 클리너 기능 등) 또는 사용자에 의해 삭제되었거나 손상되었습니다.

책장에서 삭제 후 재다운로드 받으시겠습니까?"</string>
    <string name="al_bookshelf_deleteSyncCheck">동기화 서버로 전송되지 않은 정보(하이라이트, 책갈피 등)가 있습니다. 그래도 삭제하시겠습니까?</string>
    <string name="al_bookshelf_purchase">"구매목록이 변경되었습니다.
확인하시겠습니까?"</string>
    <string name="al_bookshelf_purchaseUpdate2016">"세트(시리즈) 묶음 등 최신 기능의 업데이트 적용을 위해 구매목록 동기화가 필요합니다.

구매목록을 동기화 하시겠습니까?
(Wi-Fi / 4G 등 네트워크가 연결되어 있어야 합니다.)"</string>
    <string name="al_bookshelf_purchaseUpdate2016_421">책장 정보 업데이트를 위해 구매목록 동기화가 필요합니다.</string>
    <string name="al_bookshelf_rotation">회전</string>
    <string name="al_bookshelf_shopApp">서점</string>
    <string name="al_bookshelf_sync">도서들의 스크랩 정보를 동기화 중 입니다.</string>
    <string name="al_bookshelf_sync_error">동기화가 정상 처리되지 않았습니다. 고객팀 혹은 ebook@aladin.co.kr로 신고 바랍니다.</string>
    <string name="al_bookshelf_sync_error_net">네트워크 접속이 불안정하여 동기화가 정상 처리되지 않았습니다. 잠시 후 다시 시도해 주시기 바랍니다.</string>
    <string name="al_bookshelf_sync_noNetwork">스크랩 정보 동기화가 중지되었습니다. 네트워크 연결상태를 확인해 주시기 바랍니다.</string>
    <string name="al_bookshelf_toBundle">묶음</string>
    <string name="al_bookshelf_toBundleClear">묶음해제</string>
    <string name="al_bookshelf_viewmodeGrid">썸네일보기</string>
    <string name="al_bookshelf_viewmodeList">리스트보기</string>
    <string name="al_chrome72error_lollipop">"도서 로딩 속도 개선을 위해 안드로이드 웹뷰를 이전 버전으로 변경해야합니다.
최신 웹뷰 버전 제거 화면으로 이동하시겠습니까?"</string>
    <string name="al_click_share_limit_word_size">1000자가 초과되었습니다. 공유는 1000자까지 가능합니다.</string>
    <string name="al_delete_font_dialog_cancel">취소</string>
    <string name="al_delete_font_dialog_cannotredownload">(본 글꼴은 삭제 후 재설치가 불가능합니다.)</string>
    <string name="al_delete_font_dialog_changeorg">(설정된 글꼴은 원본 글꼴로 교체 됩니다.)</string>
    <string name="al_delete_font_dialog_message">글꼴을 삭제하시겠습니까?</string>
    <string name="al_delete_font_dialog_title">알림!!</string>
    <string name="al_delete_ing">삭제중</string>
    <string name="al_device_edit">수정할 단말기 명을 입력해주세요</string>
    <string name="al_device_pwd">알라딘 비밀번호를 입력하세요</string>
    <string name="al_device_pwd_hint">비밀번호 입력</string>
    <string name="al_exsd_select">선택</string>
    <string name="al_exsd_title">외부 저장 위치</string>
    <string name="al_inpage_menu_bottom_next">다음</string>
    <string name="bookInfo">도서정보</string>
    <string name="bookInfo_annotationOrganize">독서노트 정리</string>
    <string name="bookInfo_secret">암호설정</string>
    <string name="book_author">"저자 : "</string>
    <string name="book_publish">"출판사 : "</string>
    <string name="bookshelf_book_move">책장이동</string>
    <string name="btn_shortcut">홈화면에 바로가기 만들기</string>
    <string name="buyDate_10">"구매일 : "</string>
    <string name="close">닫기</string>
    <string name="delete">삭제</string>
    <string name="download">다운로드</string>
    <string name="enter_password">비밀번호 입력</string>
    <string name="ep_multi_done_text">완료</string>
    <string name="ep_multi_prev_text">이전</string>
    <string name="fileInfo">파일정보</string>
    <string name="fileSize">"파일용량 : "</string>
    <string name="fileType">"파일형식 : "</string>
    <string name="fontset_title">뷰어 설정</string>
    <string name="passwordCaution">"비밀번호 분실 시 책장에서
'[v](편집버튼)'을 눌러 책을 삭제하고 다시 다운로드 해야 합니다.

비밀번호를 잊지 않도록 주의하세요 !"</string>
    <string name="passwordCaution_set">시리즈 내 모든 도서의 비밀번호가 이 번호로 변경됩니다.</string>
    <string name="passwordRetype">비밀번호 재입력</string>
    <string name="pdf_contextmenu_colorchange">색상변경</string>
    <string name="pdf_contextmenu_del">삭제</string>
    <string name="pdf_contextmenu_draw">그리기</string>
    <string name="pdf_contextmenu_highlight">하이라이트</string>
    <string name="pdf_contextmenu_memo">메모</string>
    <string name="pdf_contextmenu_share">공유</string>
    <string name="rating">별점</string>
    <string name="ratingComment">평가 해 주세요.</string>
    <string name="removeFromPurchaseList">구매목록 숨김</string>
    <string name="removeFromRentalEnd">대여 삭제</string>
    <string name="rent_endDate">만료일: %1$s</string>
    <string name="select_all">전체선택</string>
    <string name="submit">전송하기</string>
</resources>