<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/al_font_header" android:textStyle="bold" android:textColor="@color/al_button_red" android:id="@id/alpupupPassword_msg_lock_isSet" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:text="@string/passwordCaution_set" />
    <TextView android:textSize="@dimen/al_font_setTitle" android:textColor="@color/al_font_black" android:id="@id/alpupupPassword_msg_lock" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="5.0dip" android:layout_marginRight="20.0dip" android:layout_marginBottom="5.0dip" android:text="@string/passwordCaution" />
    <EditText android:id="@id/alpupupPassword_edit_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/enter_password" android:singleLine="true" android:inputType="textPassword" />
    <EditText android:id="@id/alpupupPassword_edit_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:hint="@string/passwordRetype" android:singleLine="true" android:inputType="textPassword" />
</LinearLayout>