<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal" android:background="@drawable/popup_bg_mtrl" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:padding="2.0dip" android:layout_width="wrap_content" android:layout_height="24.0dip" android:divider="@drawable/al_divider_vertical_line" android:showDividers="middle">
        <TextView android:textSize="@dimen/al_font_setTitle" android:textStyle="bold" android:id="@id/pdf_contextmenu_button_set_highlight_bt" android:background="@drawable/al_button_black_clear" android:paddingLeft="@dimen/al_layout_margin_LR_2" android:paddingRight="@dimen/al_layout_margin_LR_2" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/pdf_contextmenu_highlight" style="?app_fontcolor" />
        <TextView android:textSize="@dimen/al_font_setTitle" android:textStyle="bold" android:id="@id/pdf_contextmenu_button_set_memo_bt" android:background="@drawable/al_button_black_clear" android:paddingLeft="@dimen/al_layout_margin_LR_2" android:paddingRight="@dimen/al_layout_margin_LR_2" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/pdf_contextmenu_memo" style="?app_fontcolor" />
        <TextView android:textSize="@dimen/al_font_setTitle" android:textStyle="bold" android:id="@id/pdf_contextmenu_button_set_share_bt" android:background="@drawable/al_button_black_clear" android:paddingLeft="@dimen/al_layout_margin_LR_2" android:paddingRight="@dimen/al_layout_margin_LR_2" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/pdf_contextmenu_share" style="?app_fontcolor" />
        <TextView android:textSize="@dimen/al_font_setTitle" android:textStyle="bold" android:id="@id/pdf_contextmenu_button_set_colorchange_bt" android:background="@drawable/al_button_black_clear" android:paddingLeft="@dimen/al_layout_margin_LR_2" android:paddingRight="@dimen/al_layout_margin_LR_2" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/pdf_contextmenu_colorchange" style="?app_fontcolor" />
        <TextView android:textSize="@dimen/al_font_setTitle" android:textStyle="bold" android:id="@id/pdf_contextmenu_button_set_del_bt" android:background="@drawable/al_button_black_clear" android:paddingLeft="@dimen/al_layout_margin_LR_2" android:paddingRight="@dimen/al_layout_margin_LR_2" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/pdf_contextmenu_del" style="?app_fontcolor" />
        <TextView android:textSize="@dimen/al_font_setTitle" android:textStyle="bold" android:id="@id/pdf_contextmenu_button_set_drawViewOn" android:background="@drawable/al_button_black_clear" android:paddingLeft="@dimen/al_layout_margin_LR_2" android:paddingRight="@dimen/al_layout_margin_LR_2" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/pdf_contextmenu_draw" style="?app_fontcolor" />
    </LinearLayout>
</LinearLayout>