<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/inpage_setting_dlg_layout" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/inpage_setting_title_bar" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="@dimen/al_layout_header_h" style="?app_color_header">
        <Button android:textSize="@dimen/al_font" android:gravity="center" android:id="@id/setting_ok" android:background="@drawable/al_button_white_clear" android:layout_width="@dimen/al_layout_header_button_w" android:layout_height="fill_parent" android:text="@string/ep_multi_done_text" android:layout_alignParentRight="true" style="?app_fontcolor_header" />
        <Button android:textSize="@dimen/al_font" android:gravity="center" android:id="@id/setting_prev" android:background="@drawable/al_button_white_clear" android:visibility="invisible" android:layout_width="@dimen/al_layout_header_button_w" android:layout_height="fill_parent" android:text="@string/ep_multi_prev_text" style="?app_fontcolor_header" />
        <TextView android:textSize="@dimen/al_font_header" android:gravity="center" android:id="@id/inpage_setting_title" android:background="@color/Transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/fontset_title" android:layout_centerInParent="true" style="?app_fontcolor_header" />
    </RelativeLayout>
    <include android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_below="@id/inpage_setting_title_bar" layout="@layout/inpage_setting_allset_layout_set" />
</RelativeLayout>